--- a/projeto-social/social.html
+++ b/projeto-social/social.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo/style.css">
     <title>Projeto Rede Social</title>
 </head>
 <body>
-    <h1>teste teset</h1>
+    <main>
+        <section id="telefone">
+            <iframe src="iframe/home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isso</iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="iframe/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="iframe/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="iframe/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
+            <a href="iframe/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="iframe/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="iframe/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+        </section>
+    </main>
 </body>
 </html>
