--- a/projeto-login/projeto-login.html
+++ b/projeto-login/projeto-login.html
@@ -6,17 +6,37 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/media-query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  
 </head>
-<body>
+<body> 
     <main>
         <section id="login">
             <div id="imagem">
-
+                <!--Imagem-->
             </div>
+
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja Bem-vindo(a).</p>
+                <p>Seja Bem-vindo(a). Faça seu login para acessar!</p>
+
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="email" required maxlength="30">
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-icons">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" required minlength="8" maxlength="20">
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esquecisenha.html">
+                        Esqueci a senha <span class="material-icons">mail</span>
+                    </a>
+                </form>
+
             </div>
+
         </section>
     </main>
 </body>
