--- a/projeto-login/projeto-login.html
+++ b/projeto-login/projeto-login.html
@@ -30,9 +30,7 @@
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" required minlength="8" maxlength="20">
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esquecisenha.html">
-                        Esqueci a senha <span class="material-icons">mail</span>
-                    </a>
+                    <a href="esquecisenha.html" class="botao">Esqueci a senha <span class="material-icons">mail</span></a>
                 </form>
 
             </div>
